[gd_scene load_steps=6 format=3 uid="uid://c4oh0fupwk5ij"]

[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_q6wqc"]
[ext_resource type="FontFile" uid="uid://ch4eyovb85f2h" path="res://VCR_OSD_MONO_1.001.ttf" id="2_ct22q"]
[ext_resource type="Script" path="res://scripts/ButtonGrab.gd" id="3_l65na"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sur0g"]
bg_color = Color(0, 0.211765, 0.211765, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_g2m61"]
font = ExtResource("2_ct22q")
font_size = 56

[node name="SettingsFromPauseScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6wqc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.0156863, 0.00784314, 0.133333)
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Control" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/Settings/CenterContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonBack" type="Button" parent="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -207.0
offset_right = 184.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sur0g")

[node name="PausedLabel" type="Label" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 23.0
offset_right = 94.0
offset_bottom = 76.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_g2m61")

[node name="SettingsButton" type="Button" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.0
offset_top = -282.0
offset_right = 111.0
offset_bottom = -231.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ct22q")
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="Resume" type="Button" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = 19.0
offset_right = 85.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ct22q")
theme_override_font_sizes/font_size = 48
text = "Resume"
script = ExtResource("3_l65na")

[node name="Save" type="Button" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -104.0
offset_right = 52.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ct22q")
theme_override_font_sizes/font_size = 48
text = "Save"

[connection signal="pressed" from="ColorRect/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="ColorRect/Panel/SettingsButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ColorRect/Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/Panel/Resume" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="ColorRect/Panel/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ColorRect/Panel/Save" to="." method="_on_quit_pressed"]
